#3968 increase permanent generation size in created hosted/development mode launches
git-svn-id: https://dev.vaadin.com/svn/integration/eclipse@10768 de684a11-831f-0410-ab27-cb86445eb682